<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHabitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/detalles"
        android:textColor="@color/black_500"
        android:textSize="24sp" />

        <TextView
            android:id="@+id/nameTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/habit_name"
            android:textColor="@color/black_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/na"
            android:textColor="@color/black_500"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/frequencyTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/habit_frequency"
            android:textColor="@color/black_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frequencyDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/na"
            android:textColor="@color/black_500"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/notificationTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/habit_notification"
            android:textColor="@color/black_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notificationDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/na"
            android:textColor="@color/black_500"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hourTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/hora"
            android:textColor="@color/black_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hourDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/na"
            android:textColor="@color/black_500"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/habit_date"
            android:textColor="@color/black_500"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:gravity="start"
            android:text="@string/na"
            android:textColor="@color/black_500"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>